<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.selenium.testing</groupId>
  <artifactId>selenium-testng</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>selenium-testng</name>
  <!-- Build configuration for CLI/Pipeline runs-->
  <build>
  <plugins>
    <plugin>
    	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-surefire-plugin</artifactId>
      	<version>3.0.0-M5</version>
      	<configuration>
        	<trimStackTrace>true</trimStackTrace>
        	<printSummary>true</printSummary>
      	</configuration>
    </plugin>
    <plugin>
  		<groupId>org.apache.maven.plugins</groupId>
  		<artifactId>maven-compiler-plugin</artifactId>
  		<version>3.13.0</version>
  		<configuration>
    		<compilerArgs>
      			<arg>-proc:none</arg>
    		</compilerArgs>
  		</configuration>
	</plugin>
  </plugins>
  </build>
<!-- -->
  <properties>
  	<maven.compiler.source>21</maven.compiler.source>
  	<maven.compiler.target>21</maven.compiler.target>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
	<dependencies>
		<!--https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.34.0</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>6.1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.11.0</version>
			<scope>compile</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.4.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.4.1</version>
		</dependency>
		<!--used to silent SLF4J warnings during execution (produced by testng & web-driver-manager)-->
		<dependency>
			<groupId>org.slf4j</groupId>
		<artifactId>slf4j-nop</artifactId>
			<version>2.0.16</version> 
			<scope>runtime</scope>
		</dependency>
		<!--used to silent LOG4J warnings during execution (produced by apache-poi)-->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.24.3</version>
			<scope>runtime</scope>
		</dependency>
		</dependencies>
		
</project>